--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
       "scopeName": "main.tasm",
       "path": "./syntaxes/terasm.tmLanguage.json"
     }]
-  }
+  },
+  "publisher": "DevNitrate",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DevNitrate/terasm-support"
+  },
+  "keywords": ["terasm", "assembly"]
 }
